p3/confs/ingress.yaml
## Used for the load balancer instead of the port forwarding
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  # annotations:
    # kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: argocd.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              name: https
